--- a/.github/workflows/check-in.yml
+++ b/.github/workflows/check-in.yml
@@ -71,7 +71,7 @@ jobs:
         done
     - name: Git 提交 Commit
       run: |
-        git config --global user.email 3356136957@qq.com
+        git config --global user.email junells@qq.com
         git config --global user.name HelloTools-bot
         git add .
         git commit -m ":star: 签到成功" -a
